# HonoursProject

./: .gitignore  .gitmodules  CMakeLists.txt  HonoursProj.mpp  PID.docx  compile_commands.json  configure.sh  core  make.sh
Code/: CMakeLists.txt  build.sh  configure.sh  run_tests.sh
Code/Client/: CMakeLists.txt  Client.cpp  main.cpp
Code/CommandServer/: CMakeLists.txt  CommandServer.cpp  TcpServer.cpp  main.cpp
Code/Include/Client/: Client.hpp
Code/Include/CommandServer/: ClientInfo.hpp  CommandServer.hpp  ICommandServer.hpp  TcpServer.hpp
Code/Include/MessageLib/: EncryptedMessage.hpp  IMessage.hpp  ReqeustMessage.hpp  RequestMessage.hpp  ResponseMessage.hpp  StartTransMessage.hpp
Code/Include/SecurityLib/: ConfigurationGenerator.hpp  SecurityService.hpp
Code/MessageLib/: CMakeLists.txt  EncryptedMessage.cpp  RequestMessage.cpp  ResponseMessage.cpp  StartTransMessage.cpp
Code/SecurityLib/: CMakeLists.txt
Code/SecurityLib/Factories/: SecurityServiceFactory.cpp
Code/SecurityLib/Services/: AESEncryptionService.cpp  DiffieHelmanKeyExchangeService.cpp  ElipticCurveKeyGenerationService.cpp  SHA3HashingService.cpp  SecurityService.cpp  SignatureService.cpp
Code/SecurityLib/Utilities/: ConfigurationGenerator.cpp  XMLFileIO.cpp
Code/UnitTests/: CMakeLists.txt
Code/UnitTests/MessageLib/: CMakeLists.txt  StartTransTests.cpp
Code/UnitTests/SecurityLib/: AESEncryptionTests.cpp  CMakeLists.txt  ConfigGeneratorTests.cpp  DiffieHelmanTests.cpp  ElipticCurveKeyGenerationUnitTests.cpp  KnownGoodConfig.xml  SHA3HashingTests.cpp  SecurityServiceTests.cpp  SignatureServiceUnitTests.cpp  XMLFileTesting.cpp
Code/UnitTests/SecurityLib/Mocks/: FileIOMock.hpp
Code/UnitTests/SecurityLib/TestFixtures/: SignatureServiceTest.hpp
Documentation/Final Report/: Decisions.txt  FinalReport.docx
Documentation/Mid Year Review/: MidYearReview.pptx  Thumbs.db
Documentation/PID/: PID.docx
Documentation/Reviews/: SITD-0003 MinorReviewTemplate.docx  SITD-0004 MajorReviewTemplate.docx
Documentation/Reviews/Major Reviews/: 11-27-2020.docx
Documentation/Reviews/Minor Reviews/: 11-27-2020.docx  12-04-2020.docx
Documentation/Software Design Document/: .~lock.SITD-0006 Software Design Document.docx#  SITD-0006 Software Design Document.docx
Documentation/Software Development Plan/: Software Development Plan.docx
Documentation/Software Requirements Specification/: SITD-0005 SoftwareRequirementsSpecification.docx  SoftwareRequirementsSpecefication.docx
Documentation/UML Designs/: CheckSignature.drawio  HonoursProject.ncp  Message.drawio  SystemOverview.drawio  Untitled Diagram.drawio
Evidence/Github Boards/: Thumbs.db
Hours Worked/: HoursWorked.xlsx
Research/: CnCServerImplementations.docx  Communications.docx  IOT Devices.docx
(+36 files in other folders)
